SCR #270940 - fix: modals and sidebars height jumping on ios

--- a/src/modules/core/components/float-panels/styles/themes/_default.scss
+++ b/src/modules/core/components/float-panels/styles/themes/_default.scss
@@ -8,15 +8,25 @@ $baseClass: 'wlc-float-panels';
         left: 0;
         z-index: ef.get-value($themeDefault, zindex);
         width: 100%;
-        height: 100%;
+        height: 100vh;
         background: ef.get-value($themeDefault, backdropBackgroundOpacity);
         visibility: hidden;
         transition: ef.get-value($themeDefault, transition);
+        will-change: transform;
 
         &.#{$baseClass}--open {
             @include bm.transition(background, 0.6s, ease-in-out);
             background: ef.get-value($themeDefault, backdropBackground);
             visibility: visible;
+
+            .#{$baseClass}__backdrop {
+                background: ef.get-value($themeDefault, backdropBackground);
+            }
+
+            .wlc-body--os-ios & {
+                top: ef.get-value($themeDefault, topIos);
+                transform: ef.get-value($themeDefault, transformIos);
+            }
         }
     }
 }
