--- a/src/modules/core/components/modal/styles/modal.component.scss
+++ b/src/modules/core/components/modal/styles/modal.component.scss
@@ -408,16 +408,25 @@
 // fixes for ios
 .wlc-body--os-ios {
 
-    .wlc-modal__dialog {
-        margin: ef.get-value($hostModal, 'modalOffsetIosMobile');
+    .wlc-modal {
 
-        &--scrollable {
+        &__dialog {
+            margin: ef.get-value($hostModal, 'modalOffsetIosMobile');
 
-            .wlc-modal__body {
-                @include bm.get-mq-map('height', $hostModal, 'staticMaxHeightMobileIos');
-                overflow-y: auto;
+            &--scrollable {
+
+                .wlc-modal__body {
+                    @include bm.get-mq-map('height', $hostModal, 'staticMaxHeightMobileIos');
+                    overflow-y: auto;
+                }
             }
         }
+    }
+
+    .modal-backdrop {
+        @include bm.get-mq-map('top', $hostModal, 'backdropIosTop');
+        @include bm.get-mq-map('transform', $hostModal, 'backdropIosTransform');
+        will-change: transform;
     }
 }
 
